WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169031
[Cairo] Incorrectly determining height in GraphicsContext::roundToDevicePixels()
https://bugs.webkit.org/show_bug.cgi?id=169031
Summary
[Cairo] Incorrectly determining height in GraphicsContext::roundToDevicePixels()
Tomas Popela
Reported
2017-03-01 04:21:56 PST
Found by Coverity scan: 1. webkitgtk-2.14.5/Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:748: original: "width < 0." looks like the original copy. 2. webkitgtk-2.14.5/Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:754: copy_paste_error: "width" in "width < 0." looks like a copy-paste error. 3. webkitgtk-2.14.5/Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:754: remediation: Should it say "height" instead? # 752| else # 753| width = round(width); # 754|-> if (height > -1 && width < 0) # 755| height = -1; # 756| else if (height > 0 && height < 1)
Attachments
Patch
(1.59 KB, patch)
2017-03-01 04:25 PST
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2017-03-01 04:25:36 PST
Created
attachment 303062
[details]
Patch
Tomas Popela
Comment 2
2017-03-01 06:20:00 PST
Comment on
attachment 303062
[details]
Patch Clearing flags on attachment: 303062 Committed
r213219
: <
http://trac.webkit.org/changeset/213219
>
Tomas Popela
Comment 3
2017-03-01 06:20:08 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2022-06-01 18:41:30 PDT
***
Bug 137442
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug