[Cairo] Incorrectly determining height in GraphicsContext::roundToDevicePixels() https://bugs.webkit.org/show_bug.cgi?id=169031

Reviewed by Carlos Garcia Campos.

We should compare if height is between -1 and 0 and not mixing height
and width together.

* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::roundToDevicePixels):

Canonical link: https://commits.webkit.org/186017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213219 268f45cc-cd09-0410-ab3c-d52691b4dbfc